--- a/projekti/Pages/page3.html
+++ b/projekti/Pages/page3.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projekti</title>
+    <title>Where do we come from</title>
 </head>
 <body>
     <h1>projekti</h1>
