--- a/projekti/Pages/page4.html
+++ b/projekti/Pages/page4.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connections</title>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Le Pater and Where Do We Come From Connection</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/page4.css">
 </head>
 <body>
-    <h1>projekti</h1>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Ancient Civilizations</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="page4.html">Connection</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            More
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="page2.html">Le Pater by Alphonse Mucha</a></li>
+            <li><a class="dropdown-item" href="page3.html">Where do we come from by Ernst Muldashev</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="page4.html">How they are connected</a></li>
+          </ul>
+        </li>
+      
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-secondary" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+<!-- ================= HERO SECTION ================= -->
+<section id="hero">
+
+    <!-- bg -->
+    <div class="hero-bg"></div>
+
+    <!--  overlay -->
+    <div class="overlay"></div>
+    
+
+    <!-- centered content -->
+    <div class="hero-content text-center">
+        <h1 class="title">A possible connection between Le Pater and <br>"Where do we come from?"</h1>
+
+        <h2 class="subtitle">
+            ...
+        </h2>
+
+        <p class="lead-text">
+            A web site discovering a possible connection between two mystical art pieces. Le Pater by Alphonse mucha and a book "Where do we come from" by Ernst Muldashev
+        </p>
+
+
+    <h1>connection between the le parer and where do we come from</h1>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
 </body>
 </html>
