--- a/projekti/Pages/index.html
+++ b/projekti/Pages/index.html
@@ -85,7 +85,7 @@
 
       <div class="card" style="width: 18rem;" id="Le-pater-card">
         <div class="card-image-container">
-  <img src="../images/Le Pater/wisdom.jpeg" class="card-img-top" alt="A le pater piece image">
+  <img src="../images/Le Pater/wisdom copy.jpeg" class="card-img-top" alt="A le pater piece image">
   <div class="card-overlay"></div>
         </div>
 
