--- a/projekti/Pages/page2.html
+++ b/projekti/Pages/page2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Le Pater</title>
+    <link rel="icon" type="image/png" href="../images/Ernst Muldashev/icons8-angel-100.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/page2.css">
@@ -90,19 +91,17 @@
                                 <h2 class="accordion-header">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Accordion Item #1
+                                        People reaching out to God
                                     </button>
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the first item’s accordion body.</strong> It is shown by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It’s also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        <strong>"Our Father who art in Heaven."</strong> A monumental presence looms across the scene - a celestial 
+                                        figure whose face is half-shadow, half-light. Below, figures on earth look up with awe and uncertainty as 
+                                        though seeking both protection and revelation. The upward gaze of the central woman suggests yearning - a desire 
+                                        to glimpse the divine that remains just out of reach, as though the heavens are a tapestry of secrets meant only 
+                                        for those bold enough to search.
                                     </div>
                                 </div>
                             </div>
@@ -110,19 +109,17 @@
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Accordion Item #2
+                                        People praying frightened and in awe
                                     </button>
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the second item’s accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It’s also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        <strong>"Hallowed Be Thy Name."</strong> People climb a winding, impossible stone path toward a radiant woman-shaped
+                                         light at the top. They stretch their arms toward her, reaching in awe and trembling, as though the holiness they seek i
+                                         s both beautiful and frightening. The shining figure stands still, half-human and half-pure illumination, her presence 
+                                         casting spirals of sacred patterns into the landscape. The pilgrims look torn between devotion and fear of what the divine
+                                          might reveal.
                                     </div>
                                 </div>
                             </div>
@@ -131,19 +128,17 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
-                                        Accordion Item #3
+                                        Smoke like energy rises from a womans head
                                     </button>
                                 </h2>
                                 <div id="collapseThree" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                        <strong>This is the third item’s accordion body.</strong> It is hidden by
-                                        default, until the collapse plugin adds the appropriate classes that we use to
-                                        style each element. These classes control the overall appearance, as well as the
-                                        showing and hiding via CSS transitions. You can modify any of this with custom
-                                        CSS or overriding our default variables. It’s also worth noting that just about
-                                        any HTML can go within the <code>.accordion-body</code>, though the transition
-                                        does limit overflow.
+                                        <strong>"Thy Kingdom Come, Thy Will Be Done."</strong>A single woman sits with her head tilted back, eyes closed, while a 
+                                        column of swirling, smoke-like energy rises from her head. The vapor twines upward into ornate patterns, as if her thoughts,
+                                         prayers, or spirit are being pulled into the heavens. Her posture is peaceful yet powerful. Other people who have not yet reached the enlightement 
+                                         seem to be enchanted by the woman. This image feels like a moment
+                                          of surrender where human will dissolves into divine intention - a transmission between earth and the unseen.
                                     </div>
                                 </div>
                             </div>
@@ -154,7 +149,7 @@
                         <div id="carouselExampleFade" class="carousel slide carousel-fade">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="../images/Le Pater/angel.jpeg" class="d-block w-100"
+                                    <img src="../images/Le Pater/saviour.jpeg" class="d-block w-100"
                                         alt="Le Pater 1st picture">
                                 </div>
                                 <div class="carousel-item">
@@ -162,23 +157,23 @@
                                         alt="Le Pater 2nd Picture">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/milk.jpeg" class="d-block w-100"
+                                    <img src="../images/Le Pater/wisdom.jpeg" class="d-block w-100"
                                         alt="Le Pater3rd image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/mind.jpeg" class="d-block w-100"
+                                    <img src="../images/Le Pater/mother.jpeg" class="d-block w-100"
                                         alt="Le Pater 4th image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/mother.jpeg" class="d-block w-100"
+                                    <img src="../images/Le Pater/milk.jpeg" class="d-block w-100"
                                         alt="Le Pater 5th image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/saviour.jpeg" class="d-block w-100"
+                                    <img src="../images/Le Pater/angel.jpeg" class="d-block w-100"
                                         alt="Le Pater 6th image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/wisdom.jpeg" class="d-block w-100"
+                                    <img src="../images/Le Pater/mind.jpeg" class="d-block w-100"
                                         alt="Le Pater 7yh image">
                                 </div>
                             </div>
@@ -202,14 +197,15 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseOne" aria-expanded="false"
                                         aria-controls="flush-collapseOne">
-                                        Accordion Item #1
+                                        A Motherly figure with a child
                                     </button>
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is
-                                        intended to demonstrate the <code>.accordion-flush</code> class. This is the
-                                        first item’s accordion body.</div>
+                                    <div class="accordion-body"> <strong>"On earth as it is in Heaven." </strong> A motherly figure stands with her arms open, protective and calm, 
+                                        while a small child hides at her legs, clinging to her for safety. Her open stance feels like a shelter — a human echo of divine protection.
+                                         Ornamental patterns and ethereal shapes swirl around them, suggesting that the same forces shaping heaven move gently through the earthly bond 
+                                         between mother and child.</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -217,15 +213,18 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                         aria-controls="flush-collapseTwo">
-                                        Accordion Item #2
+                                        People drinking milk
                                     </button>
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is
-                                        intended to demonstrate the <code>.accordion-flush</code> class. This is the
-                                        second item’s accordion body. Let’s imagine this being filled with some actual
-                                        content.</div>
+                                    <div class="accordion-body"><strong>"Give Us This Day Our Daily Bread"</strong> A massive, maternal deity stands towering
+                                         above the people, her chest adorned with multiple breasts from which streams of milk pour downward like sacred rivers.
+                                          Below, men, women, and children kneel on the ground, drinking the falling milk as though receiving life directly from a 
+                                          divine source. Above this scene floats a luminous woman in white, almost angelic, her body glowing as she holds something
+                                           sacred to her chest - a symbol of spiritual nourishment watching over the physical one. The entire image blends the primal 
+                                           and the holy: earthly hunger fed by a mythic mother, while a heavenly guardian hovers above, reminding the viewer that 
+                                           sustenance is both a physical need and a spiritual gift.</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -233,23 +232,29 @@
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseThree" aria-expanded="false"
                                         aria-controls="flush-collapseThree">
-                                        Accordion Item #3
+                                        An Angel giving forgiveness
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is
-                                        intended to demonstrate the <code>.accordion-flush</code> class. This is the
-                                        third item’s accordion body. Nothing more exciting happening here in terms of
-                                        content, but just filling up the space to make it look, at least at first
-                                        glance, a bit more representative of how this would look in a real-world
-                                        application.</div>
+                                    <div class="accordion-body"> <strong>"Forgive Us Our Trespasses"</strong>A towering angelic figure with wide, powerful wings
+                                         rises at the center of the scene, both arms lifted upward as if calling down judgment or mercy from above. His presence
+                                          is immense — radiant, commanding, impossible to ignore. At his feet stand smaller human figures: one man looks up at the 
+                                          angel with a mixture of fear and pleading, as though begging for forgiveness or understanding. Clinging tightly to this man’s 
+                                          legs is another figure, half-hidden, curling into himself in terror — a childlike, frightened soul seeking safety from the
+                                           overwhelming divine presence. The contrast is sharp: the angel’s vast, upright form radiates cosmic power, while the humans
+                                            below reveal the trembling vulnerability of guilt, fear, and hope. (See last plate below)</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <p class="lead-text"> <strong>"Lead us not into temptation, But deliver us from evil. Amen" Last Plate </strong> <br> A central figure stands with eyes closed, calm and vulnerable at the same time -
+                 as if surrendering themselves fully to trust. Just behind them hovers a holy, luminous being, almost like a guardian spirit. This protective presence
+                  leans gently forward, wrapping the central figure in a shield of light. Behind them both, shadowy creatures and twisted forms lurk in the darkness -
+                   the embodiments of temptation and hidden dangers. Their shapes reach forward but stop just short, unable to cross the invisible barrier created by
+                    the guardian’s light. The whole scene feels like a moment of quiet spiritual rescue a human soul standing still, eyes closed, while an unseen divine protector keeps the darkness at bay.</p>
 
             <!--button to next page-->
                 <a href="page3.html" class="btn hero-btn">read next</a>
