--- a/projekti/Pages/page3.html
+++ b/projekti/Pages/page3.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Where do we come from </title>
+    <link rel="icon" type="image/png" href="../images/Ernst Muldashev/icons8-angel-100.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/page3.css">
 </head>
@@ -61,13 +62,136 @@
         </h2>
 
         <p class="lead-text">
-            A web site discovering a possible connection between two mystical art pieces. Le Pater by Alphonse mucha and a book "Where do we come from" by Ernst Muldashev
+           Ernst Muldashev’s Where Do We Come From? explores humanity’s origins through a path that winds far beyond conventional science. 
+           Blending expedition notes, ancient legends, Tibetan mysteries, and esoteric symbols, Muldashev searches for clues hidden in sacred places,
+            lost civilizations, and secret teachings. The book suggests that our beginnings may lie in an ancient lineage — guarded, forgotten, or deliberately
+             concealed. Part investigation, part spiritual journey, it challenges readers to consider a world where myth, history, and metaphysics intersect. At its core,
+              it asks the timeless question with renewed urgency: Where did we truly come from?
         </p>
 
+ <!-- CARDSSS COLUMN OMGG-->
+  <div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+       <strong> Ernst Muldashev- author of the book </strong>
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Ernst Rifgatovich Muldashev (born 1948) is a Russian ophthalmologist and surgeon. He is best known for his work in reconstructive eye surgery 
+        and for developing innovative transplant techniques. Within the medical field, he gained recognition for combining clinical practice with experimental research.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+       <strong> Expeditions and Research Interests </strong>
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+       Alongside his medical career, Muldashev led expeditions to Tibet, the Himalayas, and other remote regions. These journeys focused
+        on ancient legends, sacred sites, and unexplained archaeological structures. His research interests gradually expanded beyond medicine
+         into anthropology, mythology, and spiritual traditions.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <strong>Author and Controversial Thinker</strong>
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+       Muldashev is the author of several bestselling books in which he presents alternative theories about human origins and lost civilizations.
+        Blending scientific language with speculative ideas, his work has sparked both fascination and controversy. He remains a distinctive figure at the crossroads
+         of science, mysticism, and exploration.
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
+    <div class="col">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../images/Ernst Muldashev/mother-of-the-world.jpg" class="d-block w-100" alt="roerich art piece">
+    </div>
+    <div class="carousel-item">
+      <img src="../images/Ernst Muldashev/dorje.jpg" class="d-block w-100" alt="roerich art piece">
+    </div>
+    <div class="carousel-item">
+      <img src="../images/Ernst Muldashev/serpent-of-wisdom.jpg" class="d-block w-100" alt="roerich art piece">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<p class="lead-text">Nicholas Roerich works related to Muldashevs book</p>
+    </div>
+    <div class="col">
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        <strong>Questioning Human Origins- the book</strong>
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">In "Where Do We Come From?", Ernst Muldashev challenges the conventional understanding of human evolution by
+         suggesting that modern humanity may not be the first advanced civilization on Earth. He proposes that ancient beings with higher knowledge
+          existed long before recorded history and that traces of their presence remain hidden in remote regions and sacred traditions. According 
+         to Muldashev, evolution may have been guided, interrupted, or preserved by forces beyond simple biological development.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        <strong>Ancient Civilizations and the “Sleeping Ones”</strong>
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">A central theory in the book revolves around the existence of ancient humans or beings who entered a state of 
+        suspended animation, often referred to as the “sleeping people.” Muldashev claims these beings are preserved in hidden locations such as underground 
+        chambers in Tibet and the Himalayas, guarded by spiritual orders. He connects this idea to legends of Shambhala and Agartha, suggesting these places
+         function as vaults of ancient knowledge and biological preservation.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+       <strong>Memory, Catastrophe, and Cycles of Humanity</strong>>
+      </button>
+    </h2>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Muldashev further theorizes that humanity has undergone multiple cycles of rise and collapse,
+         triggered by global catastrophes such as floods, climate shifts, or cosmic events. He argues that ancient myths, religious symbols, 
+         and sacred architecture encode memories of these lost eras. The book ultimately presents humanity as part of a repeating cosmic pattern —
+          watched, guided, and periodically reset — leaving the reader to question whether the past is truly gone, or merely hidden from view.</div>
+    </div>
+  </div>
+</div>
+    </div>
+  </div>
+</div>
 
-    <h1>Where do we come from - Ernst Muldashev</h1>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+   <a href="page4.html" class="btn hero-btn">read next</a>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+                crossorigin="anonymous"></script>
 
 </body>
+
 </html>
