--- a/projekti/Pages/page4.html
+++ b/projekti/Pages/page4.html
@@ -61,14 +61,105 @@
             ...
         </h2>
 
-        <p class="lead-text">
-            A web site discovering a possible connection between two mystical art pieces. Le Pater by Alphonse mucha and a book "Where do we come from" by Ernst Muldashev
+        <p class="lead-text mb-5">
+           Alphonse Mucha’s Le Pater and Ernst Muldashev’s Where Do We Come From? approach the same mystery from different directions. Mucha gives it form through symbols of guardianship, surrender, and unseen power, while Muldashev searches for its source in lost civilizations and hidden knowledge.
+
+Both suggest that humanity is not alone in its becoming — shaped, protected, or observed by forces beyond immediate understanding. Where Le Pater turns prayer into image, Muldashev turns myth into theory. Together, they point toward the same unresolved question: what ancient presence stands behind human origin and belief?
         </p>
 
+        <!-- grid of cards hopefully-->
+         <div id="row-cards">
+         <div class="container text-center">
+  <div class="row mb-5">
+    <div class="col">
+      <div class="card" id="card1" style="width: 18rem;">
+  <img src="../images/Le Pater/milk.jpeg" class="card-img-top" alt="Le Pater picture">
+  <div class="card-body">
+    <p class="card-text">The towering maternal figure nourishing humanity with divine milk can be read as a symbol of inherited knowledge rather than food. Muldashev similarly proposes that ancient, greater civilizations served as humanity’s wisdom ancestors — passing understanding down through time rather than through blood.</p>
+  </div>
+</div>
+    </div>
+    <div class="col">
+     <div class="card" id="card2" style="width: 18rem;">
+  <img src="../images/Le Pater/mind.jpeg" class="card-img-top" alt="le pater pic">
+  <div class="card-body">
+    <p class="card-text">Muldashev: He describes ancient guardians — spiritual or physical — watching over humanity from hidden places such as Shambhala or underground chambers.
+Connection: Humanity is never alone; it is observed, protected, and guided by forces older than itself.</p>
+  </div>
+</div>
+    </div>
+    <div class="col">
+      <div class="card" id="card3" style="width: 18rem;">
+  <img src="../images/Le Pater/wisdom.jpeg" class="card-img-top" alt="Le pater pic">
+  <div class="card-body">
+    <p class="card-text"> Muldashev: Human development may not be entirely self-directed, but shaped by higher intelligences or preserved plans. Muldashev also describes 
+      the place of past "fontanelle" to always stay soft in spiritual way and therefore is a connecting point between humans and energies.
+Connection: Individual will dissolves into a greater design guiding humanity’s path.</p>
+  </div>
+</div>
+    </div>
+  </div>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <div class="card" id="card4" style="width: 18rem;">
+  <img src="../images/Le Pater/mother.jpeg" class="card-img-top" alt="Le Pater pic">
+  <div class="card-body">
+    <p class="card-text">Muldashev: Ancient civilizations acted as caretakers of early humanity, preserving life and knowledge through catastrophes. He said that every mother is powerful
+      enough to heal her own child with the power of "empathy", if a human being is really suffering for other person, he will start turning the suffering into a healing energy.
+Connection: The divine relationship mirrors a parental one — protection, teaching, and preservation.</p>
+  </div>
+</div>
+    </div>
+    <div class="col">
+      <div class="card" id="card5" style="width: 18rem;">
+  <img src="../images/Le Pater/angel.jpeg" class="card-img-top" alt="Le Pater Picture">
+  <div class="card-body">
+    <p class="card-text">Muldashev: Humanity fears forgotten truths — evidence of past civilizations challenges modern identity.
+Connection: Knowledge and judgment provoke both curiosity and terror.</p>
+  </div>
+</div>
+    </div>
+    <div class="col">
+      <div class="card" id="card6" style="width: 18rem;">
+  
+  <div class="card-body">
+    <p class="card-text">Alphonse Mucha’s Le Pater is saturated with symbolic language associated with Freemasonry and esoteric traditions — light versus darkness, sacred geometry, ascension, guardianship, and hidden knowledge transmitted through symbols rather than words. Freemasonry itself is built on the idea that ancient wisdom survives in encoded form, passed down through initiations and allegory.
 
-    <h1>connection between the le parer and where do we come from</h1>
+Muldashev’s theories echo this structure. He suggests that humanity’s true origins and knowledge were not lost, but deliberately hidden — preserved by select groups, sacred sites, and spiritual guardians. In this sense, Le Pater does not illustrate prayer alone, but acts as a symbolic archive, visually transmitting the same idea Muldashev explores through theory:
+that ancient knowledge survives not openly, but through symbols, myths, and those able to read them.</p>
+  </div>
+</div>
+    </div>
+  </div>
+</div>
+         </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<!-- form i guess-->
+<div class="form-container">
+  <form>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputmessage" class="form-label">Message</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Submit what do you think</button>
+  </form>
+</div>
+
+
+
+     <a href="index.html" class="btn hero-btn">thank you</a>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+                crossorigin="anonymous"></script>
 
 </body>
+
 </html>
