--- a/projekti/Pages/index.html
+++ b/projekti/Pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Le Pater and Where Do We Come From</title>
-    <link rel="icon" type="image/png" href="../images/Ernst Muldashev/icons8-angel-100.png">
+    <link rel="icon"type="image/png"href="../images/Ernst_Muldashev/icons8-angel-100.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -86,7 +86,7 @@
 
       <div class="card" style="width: 18rem;" id="Le-pater-card">
         <div class="card-image-container">
-  <img src="../images/Le Pater/wisdom copy.jpeg" class="card-img-top" alt="A le pater piece image">
+  <img src="../images/Le_Pater/wisdom copy.jpeg" class="card-img-top" alt="A le pater piece image">
   <div class="card-overlay"></div>
         </div>
 
@@ -101,7 +101,7 @@
     </div>
     <div class="col">
       <div class="card" style="width: 18rem;" id="Muldashev-card">
-  <img src="../images/Ernst Muldashev/mother-of-the-world.jpg" class="card-img-top" alt="roerich art piece">
+  <img src="../images/Ernst_Muldashev/mother-of-the-world.jpg" class="card-img-top" alt="roerich art piece">
   <div class="img-overlay"></div>
   <div class="card-body">
     <h5 class="card-title">Where do we come from?</h5>
