--- a/projekti/Pages/page2.html
+++ b/projekti/Pages/page2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Le Pater</title>
-    <link rel="icon" type="image/png" href="../images/Ernst Muldashev/icons8-angel-100.png">
+    <link rel="icon" type="image/png" href="../images/Ernst_Muldashev/icons8-angel-100.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/page2.css">
@@ -149,31 +149,31 @@
                         <div id="carouselExampleFade" class="carousel slide carousel-fade">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="../images/Le Pater/saviour.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/saviour.jpeg" class="d-block w-100"
                                         alt="Le Pater 1st picture">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/god.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/god.jpeg" class="d-block w-100"
                                         alt="Le Pater 2nd Picture">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/wisdom.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/wisdom.jpeg" class="d-block w-100"
                                         alt="Le Pater3rd image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/mother.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/mother.jpeg" class="d-block w-100"
                                         alt="Le Pater 4th image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/milk.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/milk.jpeg" class="d-block w-100"
                                         alt="Le Pater 5th image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/angel.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/angel.jpeg" class="d-block w-100"
                                         alt="Le Pater 6th image">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../images/Le Pater/mind.jpeg" class="d-block w-100"
+                                    <img src="../images/Le_Pater/mind.jpeg" class="d-block w-100"
                                         alt="Le Pater 7yh image">
                                 </div>
                             </div>
