--- a/projekti/Pages/page3.html
+++ b/projekti/Pages/page3.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Where do we come from </title>
-    <link rel="icon" type="image/png" href="../images/Ernst Muldashev/icons8-angel-100.png">
+    <link rel="icon" type="image/png" href="../images/Ernst_Muldashev/icons8-angel-100.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/page3.css">
 </head>
@@ -121,13 +121,13 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../images/Ernst Muldashev/mother-of-the-world.jpg" class="d-block w-100" alt="roerich art piece">
+      <img src="../images/Ernst_Muldashev/mother-of-the-world.jpg" class="d-block w-100" alt="roerich art piece">
     </div>
     <div class="carousel-item">
-      <img src="../images/Ernst Muldashev/dorje.jpg" class="d-block w-100" alt="roerich art piece">
+      <img src="../images/Ernst_Muldashev/dorje.jpg" class="d-block w-100" alt="roerich art piece">
     </div>
     <div class="carousel-item">
-      <img src="../images/Ernst Muldashev/serpent-of-wisdom.jpg" class="d-block w-100" alt="roerich art piece">
+      <img src="../images/Ernst_Muldashev/serpent-of-wisdom.jpg" class="d-block w-100" alt="roerich art piece">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
