--- a/projekti/Pages/page4.html
+++ b/projekti/Pages/page4.html
@@ -73,7 +73,7 @@ Both suggest that humanity is not alone in its becoming — shaped, protected, o
   <div class="row mb-5">
     <div class="col">
       <div class="card" id="card1" style="width: 18rem;">
-  <img src="../images/Le Pater/milk.jpeg" class="card-img-top" alt="Le Pater picture">
+  <img src="../images/Le_Pater/milk.jpeg" class="card-img-top" alt="Le Pater picture">
   <div class="card-body">
     <p class="card-text">The towering maternal figure nourishing humanity with divine milk can be read as a symbol of inherited knowledge rather than food. Muldashev similarly proposes that ancient, greater civilizations served as humanity’s wisdom ancestors — passing understanding down through time rather than through blood.</p>
   </div>
@@ -81,7 +81,7 @@ Both suggest that humanity is not alone in its becoming — shaped, protected, o
     </div>
     <div class="col">
      <div class="card" id="card2" style="width: 18rem;">
-  <img src="../images/Le Pater/mind.jpeg" class="card-img-top" alt="le pater pic">
+  <img src="../images/Le_Pater/mind.jpeg" class="card-img-top" alt="le pater pic">
   <div class="card-body">
     <p class="card-text">Muldashev: He describes ancient guardians — spiritual or physical — watching over humanity from hidden places such as Shambhala or underground chambers.
 Connection: Humanity is never alone; it is observed, protected, and guided by forces older than itself.</p>
@@ -90,7 +90,7 @@ Connection: Humanity is never alone; it is observed, protected, and guided by fo
     </div>
     <div class="col">
       <div class="card" id="card3" style="width: 18rem;">
-  <img src="../images/Le Pater/wisdom.jpeg" class="card-img-top" alt="Le pater pic">
+  <img src="../images/Le_Pater/wisdom.jpeg" class="card-img-top" alt="Le pater pic">
   <div class="card-body">
     <p class="card-text"> Muldashev: Human development may not be entirely self-directed, but shaped by higher intelligences or preserved plans. Muldashev also describes 
       the place of past "fontanelle" to always stay soft in spiritual way and therefore is a connecting point between humans and energies.
@@ -104,7 +104,7 @@ Connection: Individual will dissolves into a greater design guiding humanity’s
   <div class="row">
     <div class="col">
       <div class="card" id="card4" style="width: 18rem;">
-  <img src="../images/Le Pater/mother.jpeg" class="card-img-top" alt="Le Pater pic">
+  <img src="../images/Le_Pater/mother.jpeg" class="card-img-top" alt="Le Pater pic">
   <div class="card-body">
     <p class="card-text">Muldashev: Ancient civilizations acted as caretakers of early humanity, preserving life and knowledge through catastrophes. He said that every mother is powerful
       enough to heal her own child with the power of "empathy", if a human being is really suffering for other person, he will start turning the suffering into a healing energy.
@@ -114,7 +114,7 @@ Connection: The divine relationship mirrors a parental one — protection, teach
     </div>
     <div class="col">
       <div class="card" id="card5" style="width: 18rem;">
-  <img src="../images/Le Pater/angel.jpeg" class="card-img-top" alt="Le Pater Picture">
+  <img src="../images/Le_Pater/angel.jpeg" class="card-img-top" alt="Le Pater Picture">
   <div class="card-body">
     <p class="card-text">Muldashev: Humanity fears forgotten truths — evidence of past civilizations challenges modern identity.
 Connection: Knowledge and judgment provoke both curiosity and terror.</p>
